--- a/builder/src/index.html
+++ b/builder/src/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0"
     />
-    <title>Stencil Component Starter</title>
+    <title>Stencil Component Starter!</title>
     <style>
       html {
         --color-primary: #3b013b;
